# tickets-transfer-kernel

contracts/ligo/: bridge.mligo  transfers.mligo
contracts/ligo/common/: errors.mligo  types.mligo
contracts/michelson/: bridge.tz
contracts/scripts/: package-lock.json  package.json
contracts/scripts/src/: deploy.ts  index.ts  initialise.ts
kernel/: .gitignore  Cargo.toml  Makefile
kernel/debug/: inputs.json
kernel/src/: constants.rs  lib.rs  storage.rs  utils.rs
kernel/src/core/: error.rs  message.rs  mod.rs  public_key_hash.rs  signature.rs  token.rs
smart_rollup/kernel/: .gitignore  Cargo.toml  Makefile  README.md
smart_rollup/kernel/debug/: inputs.json
smart_rollup/kernel/src/: constants.rs  lib.rs  storage.rs  utils.rs
smart_rollup/kernel/src/core/: message.rs  public_key.rs  signature.rs  token.rs
tx-client/: README.md  package-lock.json  package.json
tx-client/src/: types.ts
tx-client/src/cli/: bridge.ts  transfer.ts
tx-client/src/utils/: bridge.ts  rollup.ts  token.ts  transfer.ts
